# game-of-life

./: Cargo.toml  Dockerfile  README.md  build-tag-and-push.sh  index.html
src/: main.rs
src/app/: run.rs
src/model/: mod.rs  universe.rs
