[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bevy = { version = "0.13.2" }
rand = "0.8.5"
rand_chacha = "0.3.1"
random_color = "0.8.0"
thiserror = "1.0.57"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
